# bookstore1

./: README.md  db.sqlite3  pyproject.toml
bookstore1/: asgi.py  settings.py  urls.py  wsgi.py
order/: factories.py  urls.py
order/models/: order.py
order/serializers/: order_serializer.py
order/serializers/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  product_serializer.py
product/viewset/: __init__.py  category_viewset.py  product_viewset.py
product/viewset/tests/tests_viewsets/: test_category_viewset.py  test_product_viewset.py
